[package]
name = "numbat-codec"
version = "0.0.0"
edition = "2018"

authors = ["Andrei Marinica <andrei.marinica@numbat.com>", "Numbat Network<contact@numbat.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/numbatx/rn-sdk"
homepage = "https://numbat.com/"
documentation = "https://docs.numbat.com/"
description = "Lightweight binary serializer/deserializer, written especially for Numbat smart contracts"
keywords = ["numbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[dependencies]
wee_alloc = "0.4"
arrayvec = { version = "0.5.1", default-features = false, features = ["array-sizes-33-128", "array-sizes-129-255"] }
